Fixes (#273)
* Fixes startup & README

* Fixes export to xlsx

* Removes travis yml